feat：添加新的容器托管地址相关配置

--- a/vue-login-page-show/.env.production
+++ b/vue-login-page-show/.env.production
@@ -13,11 +13,11 @@ VITE_CDN = false
 VITE_COMPRESSION = "none"
 
 # 后端接口根路径
-VITE_OAUTH_BASE_URL = https://p64gf7d1bc.51xd.pub
+VITE_OAUTH_BASE_URL = https://calm-lory-vains-0ca1b4e1.koyeb.app
 
 # 客户端信息
 VITE_OAUTH_CLIENT_ID = messaging-client
 VITE_OAUTH_CLIENT_SECRET = 123456
-VITE_OAUTH_REDIRECT_URI = https://j1zr8ren8w.51xd.pub/OAuth2Redirect
+VITE_OAUTH_REDIRECT_URI = https://authorization-example.vercel.app/OAuth2Redirect
 VITE_PKCE_CLIENT_ID = pkce-message-client
-VITE_PKCE_REDIRECT_URI = https://j1zr8ren8w.51xd.pub/PkceRedirect
+VITE_PKCE_REDIRECT_URI = https://authorization-example.vercel.app/PkceRedirect
