feat：修改登录页面为后端不分离页面

--- a/authorization-server/pom.xml
+++ b/authorization-server/pom.xml
@@ -96,10 +96,10 @@
             <version>${velocity.version}</version>
         </dependency>
 
-        <!--<dependency>
+        <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>webjars-locator-core</artifactId>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
