--- a/authorization-server/src/main/resources/application.yml
+++ b/authorization-server/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${DB_HOST:192.168.187.128}:${DB_PORT:3306}/authorization-example?serverTimezone=Asia/Shanghai&userUnicode=true&characterEncoding=utf-8&ssl-mode=REQUIRED
+    url: jdbc:mysql://${DB_HOST:127.0.0.1}:${DB_PORT:3306}/authorization-example?serverTimezone=Asia/Shanghai&userUnicode=true&characterEncoding=utf-8&ssl-mode=REQUIRED
     username: ${DB_USER:root}
     password: ${DB_PASSWORD:root}
   security:
@@ -78,7 +78,7 @@ spring:
     default-property-inclusion: non_null
   data:
     redis:
-      url: ${REDIS_URL:redis://192.168.187.128:6379}
+      url: ${REDIS_URL:redis://127.0.0.1:6379}
 
 # Mybatis-Plus 配置
 mybatis-plus:
@@ -89,31 +89,13 @@ mybatis-plus:
 custom:
   # 自定义认证配置
   security:
-    # 登录页面路径
-    login-url: https://authorization-example.vercel.app/login
     # 授权确认页面路径
-    consent-page-uri: https://authorization-example.vercel.app/consent
+    consent-page-uri: /oauth2/consent
     # 设备码验证页面
-    device-activate-uri: https://authorization-example.vercel.app/activate
+    device-activate-uri: /activate
     # 设备码验证成功页面
-    device-activated-uri: https://authorization-example.vercel.app/activated
+    device-activated-uri: /activated
     # 不需要认证的地址
     ignore-uri-list: assets/**, /webjars/**, /login, /getCaptcha, /getSmsCaptcha, /error, /oauth2/consent/parameters, /test03, /favicon.ico, /qrCode/login/**
     # 当前认证服务访问的路径
     issuer-url: https://calm-lory-vains-0ca1b4e1.koyeb.app
-
-server:
-  servlet:
-    session:
-      cookie:
-        # 本地调试时改为127.0.0.1，然后前端、后端使用127.0.0.1访问
-        domain: koyeb.app
-
-  # 本地开发时移除下边配置
-  tomcat:
-    remoteip:
-      # protocol-header: Upgrade-Insecure-Requests
-      # protocol-header-https-value: 1
-      # 针对哲西信科https内网穿透的特殊配置
-      protocol-header: host
-      protocol-header-https-value: calm-lory-vains-0ca1b4e1.koyeb.app
