--- a/authorization-server/src/main/resources/application.yml
+++ b/authorization-server/src/main/resources/application.yml
@@ -96,6 +96,6 @@ custom:
     # 设备码验证成功页面
     device-activated-uri: /activated
     # 不需要认证的地址
-    ignore-uri-list: assets/**, /webjars/**, /login, /getCaptcha, /getSmsCaptcha, /error, /oauth2/consent/parameters, /test03, /favicon.ico, /qrCode/login/**
+    ignore-uri-list: assets/**, /webjars/**, /login, /getCaptcha, /getSmsCaptcha, /error, /oauth2/consent/parameters, /test03, /favicon.ico, /qrCode/login/**, /index.html, /callback/**
     # 当前认证服务访问的路径
     issuer-url: https://calm-lory-vains-0ca1b4e1.koyeb.app
