--- a/vue-login-page-show/.env.production
+++ b/vue-login-page-show/.env.production
@@ -18,6 +18,6 @@ VITE_OAUTH_BASE_URL = https://calm-lory-vains-0ca1b4e1.koyeb.app
 # 客户端信息
 VITE_OAUTH_CLIENT_ID = messaging-client
 VITE_OAUTH_CLIENT_SECRET = 123456
-VITE_OAUTH_REDIRECT_URI = https://authorization-example.vercel.app/OAuth2Redirect
+VITE_OAUTH_REDIRECT_URI = https://drab-shelby-leisure-7d447dec.koyeb.app/OAuth2Redirect
 VITE_PKCE_CLIENT_ID = pkce-message-client
-VITE_PKCE_REDIRECT_URI = https://authorization-example.vercel.app/PkceRedirect
+VITE_PKCE_REDIRECT_URI = https://drab-shelby-leisure-7d447dec.koyeb.app/PkceRedirect
