--- a/vue-login-page-show/Dockerfile
+++ b/vue-login-page-show/Dockerfile
@@ -14,6 +14,9 @@ RUN pnpm build
 
 FROM nginx:stable-alpine as production-stage
 
+# 将自定义配置文件复制到Nginx的配置目录
+COPY --from=build-stage /app/dist/nginx.conf /etc/nginx/nginx.conf
+
 COPY --from=build-stage /app/dist /usr/share/nginx/html
 EXPOSE 80
 
