--- a/vue-login-page-show/nginx.conf
+++ b/vue-login-page-show/nginx.conf
@@ -43,10 +43,9 @@ http {
         location / {
             root   html;
             index  index.html index.htm;
-			      try_files $uri $uri/ /index.html;
         }
 
-        #error_page  404              /404.html;
+        error_page  404              /usr/share/nginx/html/index.html;
 
         # redirect server error pages to the static page /50x.html
         #
