fix：前端项目打包时使用自定义nginx配置文件，解决刷新404问题

--- a/vue-login-page-show/nginx.conf
+++ b/vue-login-page-show/nginx.conf
@@ -45,7 +45,7 @@ http {
             index  index.html index.htm;
         }
 
-        error_page  404              /usr/share/nginx/html/index.html;
+        # error_page  404              /usr/share/nginx/html/index.html;
 
         # redirect server error pages to the static page /50x.html
         #
