--- a/vue-login-page-show/Dockerfile
+++ b/vue-login-page-show/Dockerfile
@@ -18,6 +18,7 @@ FROM nginx:stable-alpine as production-stage
 COPY nginx.conf /etc/nginx/nginx.conf
 
 COPY --from=build-stage /app/dist /usr/share/nginx/html
+COPY --from=build-stage /app/dist/index.html /usr/share/nginx/html/404.html
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
