feat：调整演示环境部署路径

--- a/vue-login-page-show/.env.production
+++ b/vue-login-page-show/.env.production
@@ -1,8 +1,8 @@
 # 线上环境平台打包路径
-VITE_PUBLIC_PATH = /
+VITE_PUBLIC_PATH = /demonstrate/
 
 # 线上环境路由历史模式（Hash模式传"hash"、HTML5模式传"h5"、Hash模式带base参数传"hash,base参数"、HTML5模式带base参数传"h5,base参数"）
-VITE_ROUTER_HISTORY = "h5"
+VITE_ROUTER_HISTORY = "h5,demonstrate"
 
 # 是否在打包时使用cdn替换本地库 替换 true 不替换 false
 VITE_CDN = false
@@ -18,6 +18,6 @@ VITE_OAUTH_BASE_URL = https://p64gf7d1bc.51xd.pub
 # 客户端信息
 VITE_OAUTH_CLIENT_ID = messaging-client
 VITE_OAUTH_CLIENT_SECRET = 123456
-VITE_OAUTH_REDIRECT_URI = https://j1zr8ren8w.51xd.pub/OAuth2Redirect
+VITE_OAUTH_REDIRECT_URI = https://j1zr8ren8w.51xd.pub/demonstrate/OAuth2Redirect
 VITE_PKCE_CLIENT_ID = pkce-message-client
-VITE_PKCE_REDIRECT_URI = https://j1zr8ren8w.51xd.pub/PkceRedirect
+VITE_PKCE_REDIRECT_URI = https://j1zr8ren8w.51xd.pub/demonstrate/PkceRedirect
