--- a/authorization-server/src/main/resources/application-prod.yml
+++ b/authorization-server/src/main/resources/application-prod.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${DB_HOST:192.168.187.128}:${DB_PORT:3306}/authorization-example?serverTimezone=Asia/Shanghai&userUnicode=true&characterEncoding=utf-8&ssl-mode=REQUIRED
+    url: jdbc:mysql://${DB_HOST:192.168.2.178}:${DB_PORT:3306}/authorization-example?serverTimezone=Asia/Shanghai&userUnicode=true&characterEncoding=utf-8&ssl-mode=REQUIRED
     username: ${DB_USER:root}
     password: ${DB_PASSWORD:root}
   security:
@@ -77,7 +77,7 @@ spring:
     default-property-inclusion: non_null
   data:
     redis:
-      url: ${REDIS_URL:redis://192.168.187.128:6379}
+      url: ${REDIS_URL:redis://192.168.2.178:6379}
 
 # Mybatis-Plus 配置
 mybatis-plus:
@@ -116,3 +116,4 @@ server:
       # 针对哲西信科https内网穿透的特殊配置
       protocol-header: host
       protocol-header-https-value: p64gf7d1bc.51xd.pub
+  port: 5000
