feat：更新演示地址

--- a/vue-login-page-show/.env.production
+++ b/vue-login-page-show/.env.production
@@ -1,8 +1,8 @@
 # 线上环境平台打包路径
-VITE_PUBLIC_PATH = /demonstrate/
+VITE_PUBLIC_PATH = /
 
 # 线上环境路由历史模式（Hash模式传"hash"、HTML5模式传"h5"、Hash模式带base参数传"hash,base参数"、HTML5模式带base参数传"h5,base参数"）
-VITE_ROUTER_HISTORY = "h5,demonstrate"
+VITE_ROUTER_HISTORY = "h5"
 
 # 是否在打包时使用cdn替换本地库 替换 true 不替换 false
 VITE_CDN = false
@@ -13,11 +13,11 @@ VITE_CDN = false
 VITE_COMPRESSION = "none"
 
 # 后端接口根路径
-VITE_OAUTH_BASE_URL = https://p64gf7d1bc.51xd.pub
+VITE_OAUTH_BASE_URL = https://oauth.sas.waitylyou.com
 
 # 客户端信息
 VITE_OAUTH_CLIENT_ID = messaging-client
 VITE_OAUTH_CLIENT_SECRET = 123456
-VITE_OAUTH_REDIRECT_URI = https://j1zr8ren8w.51xd.pub/demonstrate/OAuth2Redirect
+VITE_OAUTH_REDIRECT_URI = https://show.sas.waitylyou.com/OAuth2Redirect
 VITE_PKCE_CLIENT_ID = pkce-message-client
-VITE_PKCE_REDIRECT_URI = https://j1zr8ren8w.51xd.pub/demonstrate/PkceRedirect
+VITE_PKCE_REDIRECT_URI = https://show.sas.waitylyou.com/PkceRedirect
