--- a/vue-login-page-show/.env.development
+++ b/vue-login-page-show/.env.development
@@ -2,10 +2,10 @@
 VITE_PORT = 5173
 
 # 开发环境读取配置文件路径
-VITE_PUBLIC_PATH = /
+VITE_PUBLIC_PATH = /demonstrate/
 
 # 开发环境路由历史模式（Hash模式传"hash"、HTML5模式传"h5"、Hash模式带base参数传"hash,base参数"、HTML5模式带base参数传"h5,base参数"）
-VITE_ROUTER_HISTORY = "h5"
+VITE_ROUTER_HISTORY = "h5,demonstrate"
 
 # 后端接口根路径
 VITE_OAUTH_BASE_URL = http://172.20.10.2:8080
